--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "musaibzahoor.github.io",
   "version": "0.1.0",
-  "homepage": "https://musi7051.github.io/",
+  "homepage": "https://musaibzahoor.github.io/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
